--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    background: #ff7b7a !important;
+    color: white !important;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+img {
+    width: 100%;
+}
+
+.container {
+    background-color: #242424;
+    border: 1px solid #111;
+    margin: 50px auto;
+}
+
+/* NAVBAR */
+.activeLink {
+    background-color: #006ce0;
+    color: white;
+}
+nav {
+    border-bottom: 2px solid #111;
+}
+a.nav-link {
+    color: white;
+}
+a.nav-link:hover {
+    background-color: #0056b3;
+    color: white;
 }
