--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: #ff7b7a !important;
+    background:#151515 !important;
     color: white !important;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -21,7 +21,7 @@ img {
 .container {
     background-color: #242424;
     border: 1px solid #111;
-    margin: 50px auto;
+    margin: 0 auto;
 }
 
 /* NAVBAR */
